--- a/index.html
+++ b/index.html
@@ -3,12 +3,20 @@
   <head>
     <meta charset="UTF-8">
     <title>Portfolio Leonardo Nunes Fava</title>
+    <style>
+
+      img {
+        max-width: 7.5%;
+        object-position: right;
+      }
+
+    </style>
   </head>
   <body>
     <a href="#sobre-mim">Sobre mim</a>
     <a href="#pagina">Página que eu gosto</a>
     <h1 class="meuNome">Leonardo Nunes Fava</h1>
-    <img src="foto.jpg" alt="Foto Leonardo Nunes" id="foto" style="max-width:7.5%;">
+    <img src="foto.jpg" alt="Foto Leonardo Nunes" id="foto">
     <p class="descricao">Formado em <strong><em>Engenharia de Controle e automação</em></strong>, em trajetoria de mudança de carreira para web developer através da trybe.<br>
     Sou uma pessoa muito dedicada que cai de cabeça em tudo que quero fazer e gosto, fui lider de turma e lider de projetos na faculdade, <br>
     durante minha trajetoria na trybe espero desenvolver minha habilidade de lider e me destacar onde quiser ir.</p>
