--- a/index.html
+++ b/index.html
@@ -2,56 +2,8 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="style.css">
     <title>Portfolio Leonardo Nunes Fava</title>
-    <style>
-      body{
-        background-color: black;
-        color: white;
-        font-family: Arial, Helvetica, sans-serif;
-      }
-
-      em {
-        font-style: bold;
-        color: rgb(179, 182, 183);
-      }
-
-      #minhafoto {
-        max-width: 6%;
-        float: right;
-      }
-
-      .meuNome, .descricao {
-        font-family: 'Times New Roman', Times, serif;
-
-      }
-
-      .resido {
-        font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-        font-style: bold;
-      }
-
-      .ardino{
-        font-size: 20px;
-      }
-
-      .cplusplus{
-        font-size: 18px;
-      }
-
-      .pascal {
-        font-size: 16px;
-      }
-
-      .ingles {
-        font-size: 14px;
-      }
-
-      .japones{
-        font-size: 12px;
-      }
-
-
-    </style>
   </head>
   <body>
     <a href="#sobre-mim">Sobre mim</a>
