I forgot waht I did

--- a/index.html
+++ b/index.html
@@ -8,11 +8,15 @@
   <body>
     <a href="#sobre-mim">Sobre mim</a>
     <a href="#pagina">Página que eu gosto</a>
-    <h1 class="meuNome">Leonardo Nunes Fava</h1>
-    <img id="minhafoto" src="foto.jpg" alt="Foto Leonardo Nunes">
-    <p class="descricao">Formado em <em>Engenharia de Controle e automação</em>, em trajetoria de mudança de carreira para web developer através da trybe.<br>
-    Sou uma pessoa muito dedicada que cai de cabeça em tudo que quero fazer e gosto, fui lider de turma e lider de projetos na faculdade, <br>
-    durante minha trajetoria na trybe espero desenvolver minha habilidade de lider e me destacar onde quiser ir.</p>
+    <div>
+      <h1 class="meuNome">Leonardo Nunes Fava</h1>
+      <div>
+        <img id="minhafoto" src="foto.jpg" alt="Foto Leonardo Nunes">
+        <p class="descricao">Formado em <em>Engenharia de Controle e automação</em>, em trajetoria de mudança de carreira para web developer através da trybe.<br>
+        Sou uma pessoa muito dedicada que cai de cabeça em tudo que quero fazer e gosto, fui lider de turma e lider de projetos na faculdade, <br>
+        durante minha trajetoria na trybe espero desenvolver minha habilidade de lider e me destacar onde quiser ir.</p>
+      </div>
+    </div>
     <p class="resido">Belo Horizonte - MG</p>
     <h2>Lista de habilidades</h2>
     <ul>
